--- a/style.css
+++ b/style.css
@@ -39,3 +39,7 @@ body {
    background-color: grey;
    border-top-width: thick;
 }
+@keyframes error666 {
+  0%   {filter: invert(0%);}
+  100% {filter: invert(100%);}
+}
