--- a/style.css
+++ b/style.css
@@ -47,3 +47,41 @@ html {
   0% {filter: invert(100%);}
   100% {filter: invert(100%);}
 }
+.erbtn {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.erbtn .errtext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.erbtn .errtext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.erbtn:hover .errtext {
+  visibility: visible;
+  opacity: 1;
+}
