--- a/style.css
+++ b/style.css
@@ -50,35 +50,37 @@ html {
 .erbtn {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
 }
 
 .erbtn .errtext {
   visibility: hidden;
-  width: 120px;
   background-color: #555;
   color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
   position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
-  opacity: 0;
   transition: opacity 0.3s;
+  top: 110%;
+  left: %;
+  margin-left: -60px;
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
-
 .erbtn .errtext::after {
   content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #555 transparent;
 }
 
 .erbtn:hover .errtext {
