--- a/style.css
+++ b/style.css
@@ -44,8 +44,8 @@ html {
    text-align: center;
 }
 @keyframes error666 {
-  0% {filter: invert(100%) grayscale(0.2) brightness(0.9)}
-  100% {filter: invert(100%) grayscale(0.2) brightness(0.9);}
+  0% {filter: invert(80%) grayscale(0.2);}
+  100% {filter: invert(80%) grayscale(0.2);}
 }
 .ttbtn {
   position: relative;
