--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 	width: 100%;
 	align-items:center;
 }
-html {
+html, h1, h2, h3, h4, h5, h6, h7{
 	background-color: lime;
 	font-family: minefont;
+	font-weight: lighter;
 }
 .button {
 	display: inline-block;
