--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@
 	    -ms-flex-align:center;
 	        align-items:center;
 }
-html, h1, h2, h3, h4, h5, h6, h7{
+html{
 	background-color: lime;
+	font-family: minefont;
+	font-weight: lighter;
+}
+h1, h2, h3, h4, h5, h6, h7{
 	font-family: minefont;
 	font-weight: lighter;
 }
