--- a/creations/creations.css
+++ b/creations/creations.css
@@ -110,6 +110,7 @@ h1 {
   font-size: 1.2em;
   line-height: 30px;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit; */
