--- a/creations/creations.css
+++ b/creations/creations.css
@@ -107,7 +107,7 @@ h1 {
   display: inline-block;
   width: 100%;
   padding-left: 15px;
-  font-size: 1.2em;
+  font-size: 1rem;
   line-height: 30px;
   margin-top: 0;
   margin-bottom: 0;
