--- a/creations/creations.css
+++ b/creations/creations.css
@@ -159,7 +159,7 @@ h1 {
   }
 }
 .copperplusplus{
-  background-image: url(icons/c++ cog.png);
+  background-image: url("https://parv66.tk/creations/icons/c++ cog.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
