--- a/creations/creations.css
+++ b/creations/creations.css
@@ -193,7 +193,6 @@ h1 {
   cursor: default;
   border-image: linear-gradient(rgba(80, 0, 255, 0.31), rgba(40, 0, 127, 0.31)) 1;
 }
-
     #minetip-tooltip {
     position: fixed;
     top: 0;
@@ -242,4 +241,8 @@ p {
   color: orange;
   font-size: 24px;
   background: #FFFFAA;
+}
+.minetext {
+  height: var(--slot-size);
+  width: var(--slot-size);
 }
