--- a/creations/creations.css
+++ b/creations/creations.css
@@ -249,3 +249,8 @@ p {
   height: var(--slot-size);
   width: var(--slot-size);
 }
+.chest {
+  height: 48vh;
+  left: -28px;
+  position: absolute;
+}
