--- a/creations/creations.css
+++ b/creations/creations.css
@@ -135,7 +135,7 @@ h1 {
   animation: none;
   }
   .main1 {
-    animation: float 3s linear infinite;
+    animation: float 3s ease-in-out infinite;
     padding: 0 8px;
     padding-bottom: 8px;
     
@@ -256,7 +256,7 @@ p {
   height: 48vh;
   left: -28px;
   position: relative;
-  animation: float 3s linear infinite;
+  animation: float 3s ease-in-out infinite;
 }
 @keyframes float {
     from { transform: translate(0,  0px); }
