--- a/creations/creations.css
+++ b/creations/creations.css
@@ -31,7 +31,7 @@ html {
   position: relative;
   flex-direction: column;
   cursor: default;
-  
+  animation: float 3s ease-in-out infinite;
   height: auto;
   padding: 0 15px;
   padding-bottom: 15px;
@@ -132,43 +132,12 @@ h1 {
     0 0 0 2px #8b8b8b;
   }
   .main1 {
-    animation: float 3s ease-in-out infinite;
+    animation: none;
     padding: 0 8px;
     padding-bottom: 8px;
-    
-    box-shadow: 4px 0 0 0 #555555,
-    0 4px 0 0 #555555,
-    2px 2px 0 0 #555555,
-    -4px 0 0 0 #e8e8e8,
-    0 -4px 0 0 #e8e8e8,
-    -2px -2px 0 0 #e8e8e8,
-    0 0 0 2px #b5b4b5,
-    2px 4px 0 0 #555,
-    4px 2px 0 0 #555,
-    -2px -4px 0 0 #e8e8e8,
-    -4px -2px 0 0 #e8e8e8,
-    4px -2px 0 0 #000,
-    2px -4px 0 0 #000,
-    -4px 2px 0 0 #000,
-    -2px 4px 0 0 #000,
-    -4px -4px 0 0 #000,
-    4px 4px 0 0 #000,
-    -6px 0 0 0 #000,
-    -6px -2px 0 0 #000,
-    6px 0 0 0 #000,
-    6px 2px 0 0 #000,
-    0 -6px 0 0 #000,
-    -2px -6px 0 0 #000,
-    0 6px 0 0 #000,
-    2px 6px 0 0 #000;
   }
-@media (min-width: 800px){
   .chest {
-    float 3s ease-in-out infinite
-  }
-}
-  h1 {
-    font-size: 1rem;
+    animation: float 3s ease-in-out infinite;
   }
 }
 .copperplusplus{
