--- a/creations/creations.css
+++ b/creations/creations.css
@@ -13,7 +13,7 @@ body {
   font-size: 18px;
 }
 html {
-  background-image: url("https://parv66.tk/background.png");
+  background-image: url("https://parv66.tk/backgroundv2.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
