--- a/creations/creations.css
+++ b/creations/creations.css
@@ -31,7 +31,7 @@ html {
   position: relative;
   flex-direction: column;
   cursor: default;
-  animation: float 3s ease-in-out infinite;
+  animation: floatgui 3s ease-in-out infinite;
   height: auto;
   padding: 0 15px;
   padding-bottom: 15px;
@@ -232,3 +232,9 @@ p {
     65%  { transform: translate(0, 20px); }
     to   { transform: translate(0, -0px); }    
 }
+@keyframes floatgui {
+    from { transform: translate(0,  0px); }
+    65%  { transform: translate(0, 10px); }
+    to   { transform: translate(0, -0px); }    
+}
+
