--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html{
 	background-color: lime;
 	font-family: minefont;
 	font-weight: lighter;
-	text-align: center;
 }
 h1, h2, h3, h4, h5, h6, h7{
 	font-family: minefont;
@@ -142,4 +141,5 @@ h1, h2, h3, h4, h5, h6, h7{
     left: 5%;
     position: relative;
 }
-
+.center {
+    text-align: center}
