--- a/style.css
+++ b/style.css
@@ -99,5 +99,35 @@ h1, h2, h3, h4, h5, h6, h7{
     left: 5%;
     position: relative;
 }
-.center {
-    text-align: center}
+.youtube {
+    background-image: url("https://parv66.tk/creations/icon/youtube.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 60px);
+    width: 60px;
+    display: block;
+    cursor: default;
+}
+.youtube:hover,
+.youtube:active,
+.youtube:focus {
+    background-image: url("https://parv66.tk/creations/icon/youtube_hover.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.cord {
+    background-image: url("https://parv66.tk/creations/icon/cord.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 60px);
+    width: 60px;
+    display: block;
+    cursor: default;
+}
+.cord:hover,
+.cord:active,
+.cord:focus {
+    background-image: url("https://parv66.tk/creations/icon/cord_hover.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
