--- a/style.css
+++ b/style.css
@@ -103,10 +103,11 @@ h1, h2, h3, h4, h5, h6, h7{
     background-image: url("https://parv66.tk/icon/youtube.png");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 60px);
-    width: 60px;
-    display: block;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
     cursor: default;
+    margin: 5px;
 }
 .youtube:hover,
 .youtube:active,
@@ -119,10 +120,11 @@ h1, h2, h3, h4, h5, h6, h7{
     background-image: url("https://parv66.tk/icon/cord.png");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 60px);
-    width: 60px;
-    display: block;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
     cursor: default;
+    margin: 5px;
 }
 .cord:hover,
 .cord:active,
@@ -130,4 +132,13 @@ h1, h2, h3, h4, h5, h6, h7{
     background-image: url("https://parv66.tk/icon/cord_hover.png");
     background-size: cover;
     background-repeat: no-repeat;
+}
+footer {
+	background-color: #c6c6c6;
+	display: block;
+	text-align: center;
+	box-shadow: 8px 0 0 0 #555555, 0 8px 0 0 #555555, 4px 4px 0 0 #555555, -8px 0 0 0 #e8e8e8, 0 -8px 0 0 #e8e8e8, -4px -4px 0 0 #e8e8e8, 0 0 0 4px #b5b4b5, 4px 8px 0 0 #555, 8px 4px 0 0 #555, -4px -8px 0 0 #e8e8e8, -8px -4px 0 0 #e8e8e8, 8px -4px 0 0 #000, 4px -8px 0 0 #000, -8px 4px 0 0 #000, -4px 8px 0 0 #000, -8px -8px 0 0 #000, 8px 8px 0 0 #000, -12px 0 0 0 #000, -12px -4px 0 0 #000, 12px 0 0 0 #000, 12px 4px 0 0 #000, 0 -12px 0 0 #000, -4px -12px 0 0 #000, 0 12px 0 0 #000, 4px 12px 0 0 #000;
+	width: 100%;
+	height: 20vh;
+	display: block;
 }
