--- a/style.css
+++ b/style.css
@@ -30,8 +30,11 @@ h1, h2, h3, h4, h5, h6, h7{
 	width: 145px;
 }
  .overlay {
-  visibility: hidden;
-  opacity: 0;
+     visibility: hidden;
+     opacity: 0;
+     display: none;
+     position: fixed;
+     z-index: 1;
 }
 .overlay:target {
   visibility: visible;
