--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1, h2, h3, h4, h5, h6, h7{
  .overlay {
        visibility: hidden;
        opacity: 0;
-       display: none;
+       top: 999999999vh;
 }
 .button:hover {
 	color: #fff;
