--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ h1, h2, h3, h4, h5, h6, h7{
    position: relative;
    top: -13vh;
    left: 22vw;
+   position: sticky;
 }
 .errl {
    -webkit-animation: error666 1s linear infinite;
