--- a/style.css
+++ b/style.css
@@ -136,3 +136,14 @@ footer {
 	position: relative;
 	bottom: 0vh;
 }
+.himg {
+	filter: invert(100);
+	z-index: 2;
+	position: absolute;
+	height: auto;
+	width: 100vw;
+	top: 0vh;
+	right: 0vh;
+	left: 0vh;
+	bottom: 0vh;
+}
