--- a/trade/trade.css
+++ b/trade/trade.css
@@ -12,7 +12,7 @@ body {
     font-size: 18px;
 }
 html {
-    background-image: url("https://parv66.tk/backgroundv2.png");
+    background-image: url("https://parv66.tk/trade/background_trade.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
