--- a/trade/trade.css
+++ b/trade/trade.css
@@ -14,7 +14,7 @@ body {
 html {
     background-image: url("https://parv66.tk/trade/background_trade.png");
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
 }
 .box i {
     font-size: calc(var(--slot-size) - 6px);
