--- a/trade/trade.css
+++ b/trade/trade.css
@@ -15,6 +15,8 @@ html {
     background-image: url("https://parv66.tk/trade/background_trade.png");
     background-repeat: repeat-x;
     background-size: contain;
+    background-position-x: center;
+    background-position-y: center;
 }
 .box i {
     font-size: calc(var(--slot-size) - 6px);
