--- a/gui/itemhover.css
+++ b/gui/itemhover.css
@@ -1,3 +1,9 @@
+.tooltip {
+    text-decoration: none;
+    position: relative;
+    cursor: default;
+    border-image: linear-gradient(rgba(80, 0, 255, 0.31), rgba(40, 0, 127, 0.31)) 1;
+}
 .tooltip span {
     display: none;
     cursor: default;
