--- a/trade/trade.css
+++ b/trade/trade.css
@@ -54,8 +54,8 @@ html {
 .boxes {
     display: grid;
     align-content: center;
-    grid-template-columns: repeat(9, calc(var(--slot-size) + 4px));
-    grid-template-rows: repeat(6, calc(var(--slot-size) + 4px));
+    height: 203px;
+    width: inherit;
     cursor: default;
 }
 .boxes2 {
@@ -176,4 +176,56 @@ p {
 .minetext {
     height: var(--slot-size);
     width: var(--slot-size);
+}
+.tradeSidePanel {
+    right: 290px;
+    width: 230px;
+    height: 420px;
+    background-color: #c6c6c6;
+    position: relative;
+    display: inline-block;
+    z-index: 1;
+    box-shadow: 4px 0 0 0 #555555, 0 4px 0 0 #555555, 2px 2px 0 0 #555555, -4px 0 0 0 #e8e8e8, 0 -4px 0 0 #e8e8e8, -2px -2px 0 0 #e8e8e8, 0 0 0 2px #b5b4b5, 2px 4px 0 0 #555, 4px 2px 0 0 #555, -2px -4px 0 0 #e8e8e8, -4px -2px 0 0 #e8e8e8, 4px -2px 0 0 #000, 2px -4px 0 0 #000, -4px 2px 0 0 #000, -2px 4px 0 0 #000, -4px -4px 0 0 #000, 4px 4px 0 0 #000, -6px 0 0 0 #000, -6px -2px 0 0 #000, 6px 0 0 0 #000, 6px 2px 0 0 #000, 0 -6px 0 0 #000, -2px -6px 0 0 #000, 0 6px 0 0 #000, 2px 6px 0 0 #000;
+}
+.tradepanel {
+    height: 203px;
+    width: 310px;
+}
+.tbox1 {
+    height: var(--slot-size);
+    width: var(--slot-size);
+    background-color: #919191;
+    box-shadow: 1px 1px 0 1px #e8e8e8, -1px -1px 0 1px #555, 0 0 0 2px #8b8b8b;
+    cursor: default;
+}
+.tbox1:hover {
+    background-color: #c3c3c3;
+    cursor: default;
+}
+.tbox2 {
+    height: var(--slot-size);
+    width: var(--slot-size);
+    background-color: #919191;
+    box-shadow: 1px 1px 0 1px #e8e8e8, -1px -1px 0 1px #555, 0 0 0 2px #8b8b8b;
+    cursor: default;
+}
+.tbox2:hover {
+    background-color: #c3c3c3;
+    cursor: default;
+}
+.tbtn {
+    display: inline-block;
+    font-family: minefont;
+    color: #000;
+    text-decoration: none;
+    background-color: #c6c6c6;
+    -webkit-box-shadow: 0 10px 22px -6px #00000021, 0 -4px #555555 inset, 0 4px #ffffff inset, -4px 0 #555555 inset, 4px 0 #ffffff inset;
+    box-shadow: 0 10px 22px -6px #00000021, 0 -4px #555555 inset, 0 4px #ffffff inset, -4px 0 #555555 inset, 4px 0 #ffffff inset;
+    border-style: none;
+    width: 70px;
+    height: 30px;
+}
+.tbnb:hover {
+    background-color: #c3c3c3;
+    cursor: default;
 }
