--- a/trade/trade.css
+++ b/trade/trade.css
@@ -167,12 +167,6 @@ h1 {
     border-image: -webkit-linear-gradient(rgba(80,0,255,0.31),rgba(40,0,127,0.31)) 1;
     border-image: linear-gradient(rgba(80,0,255,0.31),rgba(40,0,127,0.31)) 1;
 }
-p {
-    font-family: minefont;
-    color: orange;
-    font-size: 24px;
-    background: #FFFFAA;
-}
 .minetext {
     height: var(--slot-size);
     width: var(--slot-size);
@@ -180,7 +174,7 @@ p {
 .tradeSidePanel {
     right: 290px;
     width: 230px;
-    height: 420px;
+    height: 350px;
     background-color: #c6c6c6;
     position: relative;
     display: inline-block;
@@ -188,23 +182,30 @@ p {
     box-shadow: 4px 0 0 0 #555555, 0 4px 0 0 #555555, 2px 2px 0 0 #555555, -4px 0 0 0 #e8e8e8, 0 -4px 0 0 #e8e8e8, -2px -2px 0 0 #e8e8e8, 0 0 0 2px #b5b4b5, 2px 4px 0 0 #555, 4px 2px 0 0 #555, -2px -4px 0 0 #e8e8e8, -4px -2px 0 0 #e8e8e8, 4px -2px 0 0 #000, 2px -4px 0 0 #000, -4px 2px 0 0 #000, -2px 4px 0 0 #000, -4px -4px 0 0 #000, 4px 4px 0 0 #000, -6px 0 0 0 #000, -6px -2px 0 0 #000, 6px 0 0 0 #000, 6px 2px 0 0 #000, 0 -6px 0 0 #000, -2px -6px 0 0 #000, 0 6px 0 0 #000, 2px 6px 0 0 #000;
 }
 .tradepanel {
-    height: 203px;
+    height: 133px;
     width: 310px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
 }
 .tbox1 {
-    height: var(--slot-size);
-    width: var(--slot-size);
+    height: 40px;
+    width: 40px;
     background-color: #919191;
     box-shadow: 1px 1px 0 1px #e8e8e8, -1px -1px 0 1px #555, 0 0 0 2px #8b8b8b;
     cursor: default;
+    bottom: 210px;
+    margin-left: 0;
 }
 .tbox1:hover {
     background-color: #c3c3c3;
     cursor: default;
 }
 .tbox2 {
-    height: var(--slot-size);
-    width: var(--slot-size);
+    height: 40px;
+    width: 40px;
     background-color: #919191;
     box-shadow: 1px 1px 0 1px #e8e8e8, -1px -1px 0 1px #555, 0 0 0 2px #8b8b8b;
     cursor: default;
@@ -216,16 +217,23 @@ p {
 .tbtn {
     display: inline-block;
     font-family: minefont;
-    color: #000;
     text-decoration: none;
-    background-color: #c6c6c6;
-    -webkit-box-shadow: 0 10px 22px -6px #00000021, 0 -4px #555555 inset, 0 4px #ffffff inset, -4px 0 #555555 inset, 4px 0 #ffffff inset;
-    box-shadow: 0 10px 22px -6px #00000021, 0 -4px #555555 inset, 0 4px #ffffff inset, -4px 0 #555555 inset, 4px 0 #ffffff inset;
+    background-color: #757575;
+    -webkit-box-shadow: 0 10px 22px -6px #00000021, 0 -4px #a5a5a5 inset, 0 4px #a5a5a5 inset, -4px 0 #a5a5a5 inset, 4px 0 #a5a5a5 inset;
+    box-shadow: 0 5px 11px -3px #00000021, 0 -2px #757575 inset, 0 2px #757575 inset, -2px 0 #757575 inset, 2px 0 #757575 inset;
     border-style: none;
-    width: 70px;
+    width: 80px;
     height: 30px;
+    color: #a5a5a5;
+    margin: 0 5 0 5;
+    border: 2px solid black;
 }
-.tbnb:hover {
-    background-color: #c3c3c3;
-    cursor: default;
+.tbtn:hover {
+    background-color: #c6c6c6;
+    box-shadow: 0 5px 11px -3px #00000021, 0 -2px #c6c6c6 inset, 0 2px #c6c6c6 inset, -2px 0 #c6c6c6 inset, 2px 0 #c6c6c6 inset;
+}
+.arrow {
+    width: auto;
+    height: 39px;
+    margin: 0 16 0 16;
 }
