--- a/trade/trade.css
+++ b/trade/trade.css
@@ -273,12 +273,13 @@ h1 {
     align-content: center;
     align-items: center;
     flex-wrap: nowrap;
+    justify-content: space-evenly;
 }
 .currency {
     width: 29px;
     height: 29px;
-    margin-left: 8px;
     background-image: url(https://parv66.tk/gui/images/prototype_currency.png);
     background-size: cover;
     z-index: 2;
+    display: block;
 }
