--- a/trade/trade.css
+++ b/trade/trade.css
@@ -283,3 +283,14 @@ h1 {
     z-index: 2;
     display: block;
 }
+@media only screen and (max-width: 600px) {
+  .main1, .tradeSidePanel {
+    left: 130px;
+    position: relative;
+    transform: translateX(-28px) translateY(350px);
+  }
+  html {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
