--- a/trade/trade.css
+++ b/trade/trade.css
@@ -46,6 +46,10 @@ html {
     background-color: #919191;
     box-shadow: 1px 1px 0 1px #e8e8e8, -1px -1px 0 1px #555, 0 0 0 2px #8b8b8b;
     cursor: default;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
 .box:hover {
     background-color: #c3c3c3;
@@ -293,4 +297,22 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
   }
+}
+.item img {
+  width: 28px;
+}
+
+.ghostItem img {
+}
+.ghostItem .number {
+  top: -20px;
+  right: -13px;
+}
+.item {
+  margin: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30px;
+  height: 30px;
 }
