--- a/gui/itemdrag.css
+++ b/gui/itemdrag.css
@@ -22,6 +22,12 @@
 }
 .ghostItem {
   right: -13px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 ::selection {
