--- a/gui/itemhover.css
+++ b/gui/itemhover.css
@@ -60,3 +60,4 @@
     border-image: -webkit-linear-gradient(rgba(80,0,255,0.31),rgba(40,0,127,0.31)) 1;
     border-image: linear-gradient(rgba(80,0,255,0.31),rgba(40,0,127,0.31)) 1;
 }
+/* &#10;&#13; for \n */
