--- a/trade/trade.css
+++ b/trade/trade.css
@@ -261,6 +261,14 @@ h1 {
     flex-wrap: nowrap;
     justify-content: space-evenly;
 }
+.toption:hover {
+    background-color: #993434;
+    box-shadow: 1px 1px 0 1px #601819, -1px -1px 0 1px #E07272, 0 0 0 2px #d64747;
+}
+.toptionPos {
+    background-color: #89C44E;
+    box-shadow: 1px 1px 0 1px #456327, -1px -1px 0 1px #ABF461, 0 0 0 2px #85BF4C;
+}
 @media only screen and (max-width: 600px) {
   .main1, .tradeSidePanel {
     left: 130px;
