--- a/trade/trade.css
+++ b/trade/trade.css
@@ -200,6 +200,10 @@ h1 {
     background-color: #919191;
     box-shadow: 1px 1px 0 1px #e8e8e8, -1px -1px 0 1px #555, 0 0 0 2px #8b8b8b;
     cursor: default;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
 .tbox2:hover {
     background-color: #c3c3c3;
