--- a/gui/itemdrag.css
+++ b/gui/itemdrag.css
@@ -15,15 +15,12 @@
   width: 28px;
 }
 .item > a {font-size: 0px;}
-.ghostItem > * {
-  width: 28px;
-  left: -2px;
-  position: relative;
-  bottom: 4px;
-}
 .ghostItem .number {
-  top: -20px;
-  right: -13px;
+  color: fff;
+  text-shadow: #333 1px 2px 1px;
+  position: relative;
+  bottom: 13px;
+  left: 7px;
 }
 
 ::selection {
@@ -32,4 +29,14 @@
 
 ::-moz-selection {
   background: transparent;
+}
+.item > .number {
+  left: 4px;
+  position: relative;
+  font-size: medium;
+  bottom: 19px;
+  z-index: 3;
+  text-shadow: #333 1px 2px 1px;
+  color: fff;
+  text-align: end;
 }
