--- a/gui/itemdrag.css
+++ b/gui/itemdrag.css
@@ -31,12 +31,13 @@
   background: transparent;
 }
 .item > .number {
-  left: 4px;
+  left: 0px;
   position: relative;
-  font-size: medium;
-  bottom: 19px;
+  font-size: 11px;
+  bottom: 12px;
   z-index: 3;
   text-shadow: #333 1px 2px 1px;
   color: fff;
   text-align: end;
+  width: 0px;
 }
