--- a/downloads/trade.css
+++ b/downloads/trade.css
@@ -209,6 +209,9 @@ h1 {
     background-color: #c3c3c3;
     cursor: default;
 }
+.tbox2Neg {
+    background-color: E07272;
+}
 .tbtn {
     display: inline-block;
     font-family: minefont;
@@ -302,11 +305,11 @@ h1 {
 }
 .toptionNeg:hover {
     background-color: #993434;
-    box-shadow: 1px 1px 0 1px #601819, -1px -1px 0 1px #E07272, 0 0 0 2px #d64747;
+    box-shadow: 1px 1px 0 1px #E07272, -1px -1px 0 1px #601819, 0 0 0 2px #d64747;
 }
 .toptionPos:hover {
     background-color: #89C44E;
-    box-shadow: 1px 1px 0 1px #456327, -1px -1px 0 1px #ABF461, 0 0 0 2px #85BF4C;
+    box-shadow: 1px 1px 0 1px #ABF461, -1px -1px 0 1px #456327, 0 0 0 2px #85BF4C;
 }
 @media only screen and (max-width: 600px) {
   .main1, .tradeSidePanel {
