--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6, h7{
 }
 .mcTextDarkred {color: #AA0000;} .mcTextDarkblue {color: #0000AA;} .mcTextDarkpurple {color: #AA00AA;} .mcTextDarkgreen {color: #00AA00;} .mcTextDarkaqua {color: #00AAAA;}
 .mcTextDarkgray, .mcTextDarkgrey {color: #555555;} .mcTextRed {color: #FF5555;} .mcTextGreen {color: #55FF55;} .mcTextAqua {color: #55FFFF;} .mcTextBlue {color: #5555FF;}
-.mcTextYellow {color: #FFFF55;}.mcTextGray, .mcTextGrey {color: #555555;} .mcTextMineGold {color: #DDD605;} .mcTextGold {color: #FFAA00;} .mcTextWhite {color: #FFFFFF;}
+.mcTextYellow {color: #FFFF55;}.mcTextGray, .mcTextGrey {color: #AAAAAA;} .mcTextMineGold {color: #DDD605;} .mcTextGold {color: #FFAA00;} .mcTextWhite {color: #FFFFFF;}
 .mcTextPurple {color: #FF55FF;}
 
 .fofimg {
