--- a/gui/contextmenu.css
+++ b/gui/contextmenu.css
@@ -3,6 +3,7 @@
   text-shadow: 0.125em 0.125em 0 #3F3F3F;
   color:#AAAAAA;
   margin: 0px;
+  cursor: default;
 }
 .cOption:hover {
   background-color: rgb(34 14 64 / 88%);
@@ -11,41 +12,4 @@
 .cinfo {
   margin: 0px;
   color: #555555;
-}
-#contextmenu {
-    width: 210px;
-    height: 265px;
-    position: fixed;
-    background-color: #100010;
-    background-color: rgba(16,0,16,0.94);
-    padding: 0.380em;
-    font-family: minefont;
-    margin: 0.125em 0.25em;
-    z-index: 6420;
-}
-.format-f, #contextmenu {
-    color: #FFF;
-    
-}
-#contextmenu::before {
-    content: "";
-    position: absolute;
-    top: 0.125em;
-    right: -0.125em;
-    bottom: 0.125em;
-    left: -0.125em;
-    border: 0.125em solid #100010;
-    border-style: none solid;
-    border-color: rgba(16,0,16,0.94);
-}
-#contextmenu::after {
-    content: "";
-    position: absolute;
-    top: 0.125em;
-    right: 0;
-    bottom: 0.125em;
-    left: 0;
-    border: 0.125em solid #2D0A63;
-    border-image: -webkit-linear-gradient(rgba(80,0,255,0.31),rgba(40,0,127,0.31)) 1;
-    border-image: linear-gradient(rgba(80,0,255,0.31),rgba(40,0,127,0.31)) 1;
 }
